# KotakAPIModule

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
kotak_api_wn/: HSWebSocketLib.py  NeoWebSocket.py  __init__.py  api_client.py  benchmark.py  neo_api.py  neo_utility.py  req_data_validation.py  rest.py  settings.py
kotak_api_wn/api/: __init__.py  limits_api.py  login_api.py  logout_api.py  margin_api.py  modify_order_api.py  order_api.py  order_history_api.py  order_report_api.py  portfolio_holdings_api.py  positions_api.py  scrip_master_api.py  scrip_search.py  totp_api.py  trade_report_api.py
kotak_api_wn/docs/: api.md  improvements.md  install.md  usage.md
