[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kotak_api_wn"
version = "1.0.0"
description = "High-performance Kotak Neo Trading API Client with optimized latency"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Kotak Securities", email = "support@kotaksecurities.com"}
]
keywords = ["kotak", "neo", "trading", "api", "stock", "market", "finance", "low-latency"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "requests>=2.28.0",
    "websocket-client>=1.4.0",
    "six>=1.16.0",
    "urllib3>=1.26.0",
    "PyJWT>=2.6.0",
]

[project.optional-dependencies]
fast = ["orjson>=3.8.0"]
async = ["aiohttp>=3.8.0"]
all = ["orjson>=3.8.0", "aiohttp>=3.8.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-benchmark>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.990",
]

[project.urls]
Documentation = "https://github.com/nicewangjie/kotak_api_wn/docs"
Source = "https://github.com/nicewangjie/kotak_api_wn"
"Bug Reports" = "https://github.com/nicewangjie/kotak_api_wn/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
kotak_api_wn = ["api/*.csv"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | __pycache__
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
